Fixed broken input dir

--- a/AdventOfCode2015/AdventOfCode2015.csproj
+++ b/AdventOfCode2015/AdventOfCode2015.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AocLib_2015\" />
+    <Compile Remove="AocLib_2015\**" />
+    <EmbeddedResource Remove="AocLib_2015\**" />
+    <None Remove="AocLib_2015\**" />
   </ItemGroup>
 
   <ItemGroup>
